--- a/browser/scss/bomb/main.scss
+++ b/browser/scss/bomb/main.scss
@@ -1,37 +1,12 @@
-* {
-  box-sizing: border-box;
+/** {
+margin: 0;
+padding: 0;
 }
-
-
-
 body {
-  background: #fdfdfd;
-}
-
-.thumbnail {
-	border: 0 none;
-	box-shadow: none;
-
-	height: 100%;
-	#keyboard {
-		display: inline;
-		.key {
-		width: 40px;
-		height: 40px;
-		background-color: cyan;
-		border-radius: 30%;
-	}
-	}
-	
-}
-@mixin clearfix {
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-#container {
+font: 71%/1.5 Verdana, Sans-Serif;
+background: #eee;
+}*/
+/*#container {
 margin: 100px auto;
 width: 688px;
 }
@@ -39,13 +14,13 @@ width: 688px;
 margin: 0 0 5px;
 padding: 5px;
 width: 671px;
-height: 50px;
+height: 200px;
 font: 1em/1.5 Verdana, Sans-Serif;
 background: #fff;
-border: 5px solid black;
+border: 1px solid #f9f9f9;
 -moz-border-radius: 5px;
 -webkit-border-radius: 5px;
-}
+}*/
 #keyboard {
 margin: 0;
 padding: 0;
@@ -101,15 +76,3 @@ list-style: none;
         border-color: #e5e5e5;
         cursor: pointer;
         }
-
-#main {
-  padding-top: 60px;
-  margin: 0 auto;
-}
-
-
-@import 'directives/main';
-@import 'home/main';
-@import 'about/main';
-@import 'tutorial/main';
-@import 'login/main';
