fix question html css transparent issue

--- a/browser/scss/bomb/main.scss
+++ b/browser/scss/bomb/main.scss
@@ -14,10 +14,10 @@ width: 688px;
 margin: 0 0 5px;
 padding: 5px;
 width: 671px;
-height: 200px;
+height: 50px;
 font: 1em/1.5 Verdana, Sans-Serif;
 background: #fff;
-border: 1px solid #f9f9f9;
+border: 2px solid black;
 -moz-border-radius: 5px;
 -webkit-border-radius: 5px;
 }
