--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -8,8 +8,10 @@ body {
   background: #fdfdfd;
 }
 h2 {
-	font-family: ‘Courier New’, Courier, monospace;
-	color: white;
+	font-size: 30px;
+	-webkit-text-fill-color: white; /* Will override color (regardless of order) */
+		   -webkit-text-stroke-width: 1px;
+		   -webkit-text-stroke-color: black;
 }
 .buttons {
 	margin-top: 10%;
@@ -18,6 +20,15 @@ h2 {
 		margin-top: 20%;
 		position: absolute;
 		z-index: 6;
+		th {
+			text-align: center;
+			font-size: 25px;
+		}
+		td {
+			font-size: 20px;
+			text-align: center;
+			color: white;
+		}
 	}
 
 .thumbnail {
@@ -65,6 +76,11 @@ bomb-view{
 	   -webkit-filter: blur(10px);
   -moz-filter: blur(10px);
   filter: blur(10px);
+}
+.not-blurry {
+	   -webkit-filter: blur(0px);
+  -moz-filter: blur(0px);
+  filter: blur(0px);
 }
 
 #container {
