--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="csshake/dist/csshake.min.css">
     <link rel="stylesheet" href="buttons/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="/lodash/index.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
