--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -13,7 +13,29 @@
 body {
   background: #fdfdfd;
 }
+
+.textbox {
+    margin-left: 30%;
+    padding: 1px 20px;
+    font-size: 25px;
+    border: 0;
+    height: 50px;
+    width: 40%;
+    text-align: center;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #BBB inset;
+    -moz-box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #BBB inset;
+    -webkit-box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #BBB inset;
+    -webkit-background-clip: padding-box;
+    outline: 0;
+}
+
+
+
 .panel {
+    margin-top: 0;
     margin-left: 20%;
     width: 60%;
 }
