tweak homepage, tighten up logic for bomb collision, change bomb to s…  … …miley when solved

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -20,7 +20,7 @@
     <script src="/main.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
-    <navbar></navbar>
+    <!-- <navbar></navbar> -->
     <div id="main" ui-view></div>
 
 </body>
