--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -1,12 +1,11 @@
 #home {
-  fullstack-logo {
-    padding-top: 30px;
-    width: 150px;
-    margin: 0 auto;
-  }
   h1 {
     margin-top: 40px;
     text-align: center;
+  },
+  .list-unstyled{
+    text-align: center;
+    padding-top:20px;
   }
 }
 
