--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -161,61 +161,6 @@ border: 5px solid black;
 -moz-border-radius: 5px;
 -webkit-border-radius: 5px;
 }
-#keyboard {
-margin: 0;
-padding: 0;
-list-style: none;
-}
-    #keyboard li {
-    float: left;
-    margin: 0 5px 5px 0;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    background: #fff;
-    border: 1px solid #f9f9f9;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    }
-        .capslock, .tab, .left-shift {
-        clear: left;
-        }
-            #keyboard .tab, #keyboard .delete {
-            width: 70px;
-            }
-            #keyboard .capslock {
-            width: 80px;
-            }
-            #keyboard .return {
-            width: 77px;
-            }
-            #keyboard .left-shift {
-            width: 95px;
-            }
-            #keyboard .right-shift {
-            width: 109px;
-            }
-        .lastitem {
-        margin-right: 0;
-        }
-        .uppercase {
-        text-transform: uppercase;
-        }
-        #keyboard .space {
-        clear: left;
-        width: 681px;
-        }
-        .on {
-        display: none;
-        }
-        #keyboard li:hover {
-        position: relative;
-        top: 1px;
-        left: 1px;
-        border-color: #e5e5e5;
-        cursor: pointer;
-        }
 
 #main {
   padding-top: 10%;
@@ -246,9 +191,19 @@ save-score{
     margin:10px auto;
     width: 800px;
     height: 600px;
+    text-align: center;
 }
+#top-score-container{
+    table {text-align: center;}
 
+    th , td {
+      border-collapse: collapse;
+      padding: 5px 10px;
+      text-align: center;
+    }
 
+    
+}
 
 @import 'directives/main';
 @import 'home/main';
