Oauth, User login and sign up, created Create User Route

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -5,7 +5,10 @@
   },
   .list-unstyled{
     text-align: center;
-    padding-top:20px;
+    margin-top:20px;
+  }
+  li {
+  	margin-bottom: 20px;
   }
 }
 
