--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -4,6 +4,8 @@
     <base href="/" />
     <title>Regex Race</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.0.0/bootstrap-social.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="/magic/magic.css" />
     <link rel="stylesheet" type="text/css" href="csshake/dist/csshake.min.css">
     <link rel="stylesheet" href="buttons/css/buttons.css">
