--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -1,4 +1,6 @@
 #home {
+  padding-top: 5%;
+  color: cyan;
   h1 {
     margin-top: 40px;
     text-align: center;
@@ -6,6 +8,9 @@
   .list-unstyled{
     text-align: center;
     margin-top:20px;
+  }
+  h4 {
+    color: magenta !important;
   }
   li {
   	margin-bottom: 20px;
