--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -143,7 +143,9 @@ h3 {
 			color: white;
 		}
 	}
-
+#account-title {
+    font-size: 18px;
+}
 .thumbnail {
 	border: 0 none;
 	box-shadow: none;
@@ -212,10 +214,18 @@ width: 100%;
 
 }
 
+.stats {
+    color: white;
+    text-align: center;
+    padding: 3px;
+}
+
 .input-margin {
    height: 100px;
 }
-
+.progress {
+    margin-right: 5%;
+}
 #write {
 margin: 0 0 5px;
 padding: 5px;
@@ -230,7 +240,7 @@ border: 5px solid black;
 }
 
 #main {
-  padding-top: 0%;
+  padding-top: 5%;
   margin: 0 auto;
 }
 
