--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -245,7 +245,7 @@ border: 5px solid black;
     border-radius: 30%;
 }
 save-score{
-    padding-top:10%;
+    padding-top:8%;
     position: absolute;
     top: 0;
     right: 0;
@@ -261,7 +261,10 @@ save-score{
     text-align: center;
 }
 #top-score-container{
-    table {text-align: center;}
+    table {
+        text-align: center;
+        margin: 0 auto;
+    }
 
     th , td {
       border-collapse: collapse;
