sub branch to correct button issue

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -319,6 +319,9 @@ save-score{
     .panel {
         margin-bottom: 20px;
     }
+    button {
+        margin-bottom: 20px;
+    }
 }
 
 @import 'directives/main';
