updates to account view and answers view

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -22,47 +22,7 @@
         }
     }
 }
-.sign-up-form {
-  width: 100%;
-  margin-left: 40%;
-  margin-top: 10%;
-  inputs:-webkit-input-placeholder {
-    color: #b5b5b5;
-}
 
-inputs-moz-placeholder {
-    color: #b5b5b5;
-}
-
-
-
-.inputs {
-    position: center;
-    outline: none;
-    display: block;
-    width: 270px;
-    padding: 4px 8px;
-    border: 1px dashed #DBDBDB;
-    color: #3F3F3F;
-    font-family: 'Droid Sans', Tahoma, Arial, Verdana sans-serif;
-    font-size: 14px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    -webkit-transition: background 0.2s linear, box-shadow 0.6s linear;
-    -moz-transition: background 0.2s linear, box-shadow 0.6s linear;
-    -o-transition: background 0.2s linear, box-shadow 0.6s linear;
-    transition: background 0.2s linear, box-shadow 0.6s linear;
-}
-
-.inputs:focus {
-    background: #F7F7F7;
-    border: dashed 1px #969696;
-    -webkit-box-shadow: 2px 2px 7px #E8E8E8 inset;
-    -moz-box-shadow: 2px 2px 7px #E8E8E8 inset;
-    box-shadow: 2px 2px 7px #E8E8E8 inset;
-}
-}
 
 .btn-social {
     text-align: center;
@@ -318,10 +278,60 @@ save-score{
 #answers-page {
     .panel {
         margin-bottom: 20px;
+        .panel-heading {
+            background-color: black;
+            color: white;
+        }
+        
     }
     button {
         margin-bottom: 20px;
     }
+}
+.progress-bar {
+    background-color: black;
+}
+
+.sign-up-form {
+  width: 100%;
+  margin-left: 40%;
+  margin-top: 10%;
+  inputs:-webkit-input-placeholder {
+    color: #b5b5b5;
+}
+
+inputs-moz-placeholder {
+    color: #b5b5b5;
+}
+
+
+
+.inputs {
+    position: center;
+    outline: none;
+    display: block;
+    width: 270px;
+    padding: 4px 8px;
+    border: 1px dashed #DBDBDB;
+    color: #3F3F3F;
+    font-family: 'Droid Sans', Tahoma, Arial, Verdana sans-serif;
+    font-size: 14px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    -webkit-transition: background 0.2s linear, box-shadow 0.6s linear;
+    -moz-transition: background 0.2s linear, box-shadow 0.6s linear;
+    -o-transition: background 0.2s linear, box-shadow 0.6s linear;
+    transition: background 0.2s linear, box-shadow 0.6s linear;
+}
+
+.inputs:focus {
+    background: #F7F7F7;
+    border: dashed 1px #969696;
+    -webkit-box-shadow: 2px 2px 7px #E8E8E8 inset;
+    -moz-box-shadow: 2px 2px 7px #E8E8E8 inset;
+    box-shadow: 2px 2px 7px #E8E8E8 inset;
+}
 }
 
 @import 'directives/main';
