Have the basics for recieving function generated regex questions and serving them up on the question view

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -304,6 +304,11 @@ inputs-moz-placeholder {
     color: #b5b5b5;
 }
 
+.questionprogress {
+    background-color: red;
+    margin-left: 5% !important;
+   margin-top: 20px;
+}
 
 
 .inputs {
