--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -2,12 +2,11 @@
   padding-top: 5%;
   color: cyan;
   h1 {
-    margin-top: 40px;
     text-align: center;
   },
   .list-unstyled{
     text-align: center;
-    margin-top:20px;
+    margin:20px;
   }
   h4 {
     color: magenta !important;
