fix margin css for end-game-sign-up

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -266,7 +266,7 @@ save-score{
     z-index: 9;
     input {
         padding: 8px;
-        margin: 2px;
+        margin: 5px auto;
     }
 
 }
@@ -314,9 +314,12 @@ save-score{
   width: 100%;
   margin-left: 40%;
   margin-top: 10%;
+  .inputs {
+    margin: 12px 0;
+  }
   inputs:-webkit-input-placeholder {
     color: #b5b5b5;
-    margin-bottom: 5%;
+    
   }
 }
 
@@ -328,7 +331,7 @@ inputs-moz-placeholder {
 
 
 .inputs {
-    margin: 12px 0;
+
     position: center;
     outline: none;
     display: block;
