--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -404,7 +404,8 @@ regex-race-logo img:hover{
         font-family: Verdana, Helvetica, Sans-Serif !important;
     }
     font-family: Verdana, Helvetica, Sans-Serif !important;
-    background-color: rgba(255, 255, 255, 0.4);
+    color: white;
+    background-color: rgba(0, 0, 0, 1);
    
 }
 
