--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <base href="/" />
     <title>Regex Race</title>
+    <meta name="description" content="Regex Race allows programmers to practice their JavaScript regular expression skills by disarming bombs in a race against time">
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.0.0/bootstrap-social.css" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
@@ -23,7 +24,7 @@
     <script src="/main.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
-    
+
     <div id="main" ui-view></div>
 
 </body>
