--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -3,14 +3,13 @@
 <head>
     <base href="/" />
     <title>Regex Race</title>
-    <meta name="description" content="Regex Race allows programmers to practice their JavaScript regular expression skills by disarming bombs in a race against time">
-    <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.0.0/bootstrap-social.css" />
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <meta name="description"
+          content="Regex Race allows programmers to practice their JavaScript regular expression skills by disarming bombs in a race against time">
     <link rel="stylesheet" type="text/css" href="/magic/magic.css" />
     <link rel="stylesheet" type="text/css" href="csshake/dist/csshake.min.css">
     <link rel="stylesheet" href="buttons/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="/style.css" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="/lodash/index.js"></script>
     <script src="/angular/angular.js"></script>
