--- a/browser/css/npm.css
+++ b/browser/css/npm.css
@@ -1,3 +1,5 @@
 @import url(../../node_modules/bootstrap/dist/css/bootstrap.css);
 @import url(../../node_modules/bootstrap-social/bootstrap-social.css);
 @import url(../../node_modules/font-awesome/css/font-awesome.css);
+@import url(../../node_modules/magic.css/1.1.0/magic.css);
+@import url(../../node_modules/csshake/dist/csshake.css);
