--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -6,7 +6,7 @@
     <meta name="description"
           content="Regex Race allows programmers to practice their JavaScript regular expression skills by disarming bombs in a race against time">
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/lodash/index.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
@@ -14,7 +14,7 @@
     <script src="/angular-ui-bootstrap/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/socket.io-client/socket.io.js"></script>
-    <script src="//cdn.jsdelivr.net/phaser/2.6.1/phaser.js"></script>
+    <script src="/phaser/build/phaser.min.js"></script>
     <script src="/main.js"></script>
     <script src="/analytics.js"></script>
   </head>
