--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: gameFont;
-    src: url(PressStart2P.ttf);
+    src: url(/fonts/PressStart2P.ttf);
 }
 
 
@@ -41,7 +41,7 @@
 
 body {
   background: darken(rgba(115, 38, 77, 1.3), 2%);
-  background-image: url(city.gif);
+  background-image: url(./images/city.gif);
   background-repeat: no-repeat;
   background-height: 100%;
   background-attachment: fixed;
@@ -319,7 +319,7 @@ save-score{
   }
   inputs:-webkit-input-placeholder {
     color: #b5b5b5;
-    
+
   }
 }
 
