--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="/socket.io-client/socket.io.js"></script>
     <script src="/bundle.js"></script>
-    <script src="/analytics.js"></script>
   </head>
   <body ng-app="FullstackGeneratedApp">
     <div id="main" ui-view></div>
   </body>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-83923231-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </html>
